Se raliza ajuste a cors, se ajusta servicio de Lectura para filtrar