@@ -8,6 +8,7 @@ import java.util.Optional;
 import org.postgresql.util.PGobject;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
@@ -16,6 +17,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.aqua.plus.api.service.ILecturaService;
+import com.aqua.plus.api.service.impl.specification.LecturaSpecifications;
 import com.aqua.plus.commons.dtos.LecturaDTO;
 import com.aqua.plus.commons.dtos.ResponseDTO;
 import com.aqua.plus.commons.entities.ContadorEntity;
@@ -47,143 +49,160 @@ public class LecturaServiceImpl implements ILecturaService {
 	private final ContadorRepository contadorRepository;
 	private final LecturaMapper lecturaMapper;
 	private final NamedParameterJdbcTemplate namedParameterJdbcTemplate;
-    private final ObjectMapper objectMapper;
-	
+	private final ObjectMapper objectMapper;
+
 	@Override
 	@Transactional
 	public ResponseEntity<ResponseDTO> save(LecturaDTO lecturaDTO) {
-	    log.info("Guardar/Actualizar lectura");
-	    try {
-	        boolean isUpdate = lecturaDTO.getId() != null && lecturaRepository.existsById(lecturaDTO.getId());
-	        LecturaEntity entity;
-	        log.info("existe id lectura:{} ", lecturaDTO.getId());
-	        if (isUpdate) {
-	            entity = lecturaRepository.findById(lecturaDTO.getId()).orElseThrow();
-	            lecturaMapper.updateEntityFromDto(lecturaDTO, entity);
-	            entity.setFechaModificacion(new Date());
-	            entity.setUsuarioModificacion(lecturaDTO.getUsuarioModificacion());
-	        } else {
-	            entity = lecturaMapper.dtoToEntity(lecturaDTO);
-	            entity.setFechaLectura(new Date());
-	            entity.setFechaCreacion(new Date());
-	            entity.setUsuarioCreacion(lecturaDTO.getUsuarioCreacion());
-	            entity.setActivo(true);
-	        }
-	        
-	        if (lecturaDTO.getContador() != null && lecturaDTO.getContador().getId() != null) {
-	            ContadorEntity contador = contadorRepository
-	                .findById(lecturaDTO.getContador().getId())
-	                .orElseThrow(() -> new RuntimeException(Constantes.CON_NOT_FOUND));
-	            entity.setContador(contador);
-	        }
+		log.info("Guardar/Actualizar lectura");
+		try {
+			boolean isUpdate = lecturaDTO.getId() != null && lecturaRepository.existsById(lecturaDTO.getId());
+			LecturaEntity entity;
+			log.info("existe id lectura:{} ", lecturaDTO.getId());
+			if (isUpdate) {
+				entity = lecturaRepository.findById(lecturaDTO.getId()).orElseThrow();
+				lecturaMapper.updateEntityFromDto(lecturaDTO, entity);
+				entity.setFechaModificacion(new Date());
+				entity.setUsuarioModificacion(lecturaDTO.getUsuarioModificacion());
+			} else {
+				entity = lecturaMapper.dtoToEntity(lecturaDTO);
+				entity.setFechaLectura(new Date());
+				entity.setFechaCreacion(new Date());
+				entity.setUsuarioCreacion(lecturaDTO.getUsuarioCreacion());
+				entity.setActivo(true);
+			}
 
-	        LecturaEntity saved = lecturaRepository.save(entity);
-	        LecturaDTO savedDTO = lecturaMapper.entityToDto(saved);
+			if (lecturaDTO.getContador() != null && lecturaDTO.getContador().getId() != null) {
+				ContadorEntity contador = contadorRepository.findById(lecturaDTO.getContador().getId())
+						.orElseThrow(() -> new RuntimeException(Constantes.CON_NOT_FOUND));
+				entity.setContador(contador);
+			}
 
-	        String message = isUpdate ? Constantes.UPDATED_SUCCESSFULLY : Constantes.SAVED_SUCCESSFULLY;
-	        int statusCode = isUpdate ? HttpStatus.OK.value() : HttpStatus.CREATED.value();
+			LecturaEntity saved = lecturaRepository.save(entity);
+			LecturaDTO savedDTO = lecturaMapper.entityToDto(saved);
 
-	        ResponseDTO responseDTO = ResponseDTO.builder()
-	            .success(true)
-	            .message(message)
-	            .code(statusCode)
-	            .response(savedDTO)
-	            .build();
+			String message = isUpdate ? Constantes.UPDATED_SUCCESSFULLY : Constantes.SAVED_SUCCESSFULLY;
+			int statusCode = isUpdate ? HttpStatus.OK.value() : HttpStatus.CREATED.value();
 
-	        return ResponseEntity.status(statusCode).body(responseDTO);
+			ResponseDTO responseDTO = ResponseDTO.builder().success(true).message(message).code(statusCode)
+					.response(savedDTO).build();
 
-	    } catch (Exception e) {
-	        log.error("Error guardando lectura", e);
-	        ResponseDTO errorResponse = ResponseDTO.builder()
-	            .success(false)
-	            .message(Constantes.SAVE_ERROR)
-	            .code(HttpStatus.BAD_REQUEST.value())
-	            .build();
+			return ResponseEntity.status(statusCode).body(responseDTO);
 
-	        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
-	    }
+		} catch (Exception e) {
+			log.error("Error guardando lectura", e);
+			ResponseDTO errorResponse = ResponseDTO.builder().success(false).message(Constantes.SAVE_ERROR)
+					.code(HttpStatus.BAD_REQUEST.value()).build();
+
+			return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
+		}
 	}
-	
+
 	/**
-     * Guarda una lectura a partir de los parámetros recibidos en formato JSON.
-     * Llama a un procedimiento almacenado en PostgreSQL y devuelve el resultado deserializado.
-     * 
-     * @author nicope
-     * @version 1.0
-     */
+	 * Guarda una lectura a partir de los parámetros recibidos en formato JSON.
+	 * Llama a un procedimiento almacenado en PostgreSQL y devuelve el resultado
+	 * deserializado.
+	 * 
+	 * @author nicope
+	 * @version 1.0
+	 */
 	@Transactional
-    public Map<String, Object> guardarLectura(Map<String, Object> jsonParams) {
-        try {
-            String jsonString = objectMapper.writeValueAsString(jsonParams);
+	public Map<String, Object> guardarLectura(Map<String, Object> jsonParams) {
+		try {
+			String jsonString = objectMapper.writeValueAsString(jsonParams);
 
-            String sql = "SELECT * FROM public.registrar_lectura(CAST(:jsonData AS jsonb))";
-            
-            MapSqlParameterSource parameters = new MapSqlParameterSource();
-            parameters.addValue("jsonData", jsonString);
+			String sql = "SELECT * FROM public.registrar_lectura(CAST(:jsonData AS jsonb))";
 
-            Map<String, Object> rawResult = namedParameterJdbcTemplate.queryForMap(sql, parameters);
+			MapSqlParameterSource parameters = new MapSqlParameterSource();
+			parameters.addValue("jsonData", jsonString);
 
-            // Obtener el campo "value" del resultado
-            Object wrappedValue = rawResult.get("registrar_lectura");
-            if (wrappedValue instanceof PGobject pgObject && "jsonb".equals(pgObject.getType())) {
-                String jsonValue = pgObject.getValue();
-                // Deserializar a Map
-                return objectMapper.readValue(jsonValue, new TypeReference<Map<String, Object>>() {});
-            }
+			Map<String, Object> rawResult = namedParameterJdbcTemplate.queryForMap(sql, parameters);
 
-            return Map.of(Constantes.ERROR_KEY, Constantes.RESULT_COULD_NOT_PROCESSED);
+			// Obtener el campo "value" del resultado
+			Object wrappedValue = rawResult.get("registrar_lectura");
+			if (wrappedValue instanceof PGobject pgObject && "jsonb".equals(pgObject.getType())) {
+				String jsonValue = pgObject.getValue();
+				// Deserializar a Map
+				return objectMapper.readValue(jsonValue, new TypeReference<Map<String, Object>>() {
+				});
+			}
 
-        } catch (JsonProcessingException e) {
-            e.printStackTrace();
-            return Collections.singletonMap(Constantes.ERROR_KEY, Constantes.PROCCESSING_ERROR + e.getMessage());
-        } catch (Exception e) {
-            e.printStackTrace();
-            return Collections.singletonMap(Constantes.ERROR_KEY, Constantes.UNEXPECTED_ERROR + e.getMessage());
-        }
-    }
+			return Map.of(Constantes.ERROR_KEY, Constantes.RESULT_COULD_NOT_PROCESSED);
+
+		} catch (JsonProcessingException e) {
+			e.printStackTrace();
+			return Collections.singletonMap(Constantes.ERROR_KEY, Constantes.PROCCESSING_ERROR + e.getMessage());
+		} catch (Exception e) {
+			e.printStackTrace();
+			return Collections.singletonMap(Constantes.ERROR_KEY, Constantes.UNEXPECTED_ERROR + e.getMessage());
+		}
+	}
 
 	@Override
 	@Transactional(readOnly = true)
 	public ResponseEntity<ResponseDTO> findById(Integer id) {
-	    log.info("Buscar lectura por id: {}", id);
-	    try {
-	        Optional<LecturaEntity> lectura = lecturaRepository.findById(id);
-	        if (lectura.isPresent()) {
-	        	LecturaDTO dto = lecturaMapper.entityToDto(lectura.get());
-	            ResponseDTO responseDTO = ResponseDTO.builder()
-	                    .success(true)
-	                    .message(Constantes.CONSULTED_SUCCESSFULLY)
-	                    .code(HttpStatus.OK.value())
-	                    .response(dto)
-	                    .build();
-	            return ResponseEntity.ok(responseDTO);
-	        } else {
-	            ResponseDTO responseDTO = ResponseDTO.builder()
-	                    .success(false)
-	                    .message(Constantes.CONSULTING_ERROR)
-	                    .code(HttpStatus.NOT_FOUND.value())
-	                    .build();
-	            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(responseDTO);
-	        }
-	    } catch (Exception e) {
-	        log.error("Error al buscar lectura por id: {}", id, e);
-	        ResponseDTO responseDTO = ResponseDTO.builder()
-	                .success(false)
-	                .message(Constantes.ERROR_QUERY_RECORD_BY_ID)
-	                .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
-	                .build();
-	        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(responseDTO);
-	    }
+		log.info("Buscar lectura por id: {}", id);
+		try {
+			Optional<LecturaEntity> lectura = lecturaRepository.findById(id);
+			if (lectura.isPresent()) {
+				LecturaDTO dto = lecturaMapper.entityToDto(lectura.get());
+				ResponseDTO responseDTO = ResponseDTO.builder().success(true).message(Constantes.CONSULTED_SUCCESSFULLY)
+						.code(HttpStatus.OK.value()).response(dto).build();
+				return ResponseEntity.ok(responseDTO);
+			} else {
+				ResponseDTO responseDTO = ResponseDTO.builder().success(false).message(Constantes.CONSULTING_ERROR)
+						.code(HttpStatus.NOT_FOUND.value()).build();
+				return ResponseEntity.status(HttpStatus.NOT_FOUND).body(responseDTO);
+			}
+		} catch (Exception e) {
+			log.error("Error al buscar lectura por id: {}", id, e);
+			ResponseDTO responseDTO = ResponseDTO.builder().success(false).message(Constantes.ERROR_QUERY_RECORD_BY_ID)
+					.code(HttpStatus.INTERNAL_SERVER_ERROR.value()).build();
+			return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(responseDTO);
+		}
 	}
+	
 	
 	@Override
 	@Transactional(readOnly = true)
-	public ResponseEntity<ResponseDTO> findLecturasByEmpresaId(Integer empresaId, Pageable pageable) {
-	    log.info("Listar lecturas por ID de empresa: {}", empresaId);
-	    try {
-	        Page<LecturaEntity> lecturas = lecturaRepository.findByEmpresaId(empresaId, pageable);
+	public ResponseEntity<ResponseDTO> findLecturasByEmpresaId(
+	        Integer empresaId,
+	        String serial,
+	        Integer lectura,
+	        String fechaDesde,
+	        String fechaHasta,
+	        Boolean consumoAnormal,
+	        String observacion,
+	        Pageable pageable) {
 
-	        if (lecturas.isEmpty()) {
+	    log.info(
+	        "Listar lecturas por empresaId={} con filtros: serial={}, lectura={}, fechaDesde={}, fechaHasta={}, consumoAnormal={}, observacion={}",
+	        empresaId, serial, lectura, fechaDesde, fechaHasta, consumoAnormal, observacion
+	    );
+
+	    try {
+	        java.time.LocalDate dDesde = (fechaDesde == null || fechaDesde.isBlank())
+	                ? null : java.time.LocalDate.parse(fechaDesde);
+	        java.time.LocalDate dHasta = (fechaHasta == null || fechaHasta.isBlank())
+	                ? null : java.time.LocalDate.parse(fechaHasta);
+
+	        if (dDesde != null && dHasta != null && dDesde.isAfter(dHasta)) {
+	            java.time.LocalDate tmp = dDesde; dDesde = dHasta; dHasta = tmp;
+	        }
+
+	        Specification<LecturaEntity> spec = Specification.allOf(java.util.List.of(
+	            LecturaSpecifications.perteneceAEmpresa(empresaId),
+	            LecturaSpecifications.serialLike(serial),
+	            LecturaSpecifications.lecturaEquals(lectura),
+	            LecturaSpecifications.fechaBetween(dDesde, dHasta),
+	            LecturaSpecifications.consumoAnormalEquals(consumoAnormal),
+	            LecturaSpecifications.observacionLike(observacion)
+	        ));
+
+	        Pageable pageToUse = (pageable != null ? pageable : Pageable.unpaged());
+	        Page<LecturaEntity> page = lecturaRepository.findAll(spec, pageToUse);
+
+	        if (page.isEmpty()) {
 	            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(
 	                ResponseDTO.builder()
 	                    .success(false)
@@ -193,14 +212,23 @@ public class LecturaServiceImpl implements ILecturaService {
 	            );
 	        }
 
-	        var dtoList = lecturaMapper.listEntityToDtoList(lecturas.getContent());
+	        var content = lecturaMapper.listEntityToDtoList(page.getContent());
 
 	        return ResponseEntity.ok(
 	            ResponseDTO.builder()
 	                .success(true)
 	                .message(Constantes.CONSULTED_SUCCESSFULLY)
 	                .code(HttpStatus.OK.value())
-	                .response(dtoList)
+	                .response(content)
+	                .build()
+	        );
+
+	    } catch (java.time.format.DateTimeParseException ex) {
+	        return ResponseEntity.badRequest().body(
+	            ResponseDTO.builder()
+	                .success(false)
+	                .message("Formato de fecha inválido. Usa yyyy-MM-dd")
+	                .code(HttpStatus.BAD_REQUEST.value())
 	                .build()
 	        );
 	    } catch (Exception e) {
@@ -216,60 +244,44 @@ public class LecturaServiceImpl implements ILecturaService {
 	}
 
 
-    @Override
-    @Transactional(readOnly = true)
-    public ResponseEntity<ResponseDTO> findAll() {
-        log.info("Listar todas las lecturas");
-        try {
-            var list = lecturaRepository.findAll();
-            var dtoList = lecturaMapper.listEntityToDtoList(list);
-            ResponseDTO responseDTO = ResponseDTO.builder()
-                    .success(true)
-                    .message(Constantes.CONSULTED_SUCCESSFULLY)
-                    .code(HttpStatus.OK.value())
-                    .response(dtoList)
-                    .build();
-            return ResponseEntity.ok(responseDTO);
-        } catch (Exception e) {
-            log.error("Error al listar las lecturas", e);
-            ResponseDTO responseDTO = ResponseDTO.builder()
-                    .success(false)
-                    .message(Constantes.CONSULTING_ERROR)
-                    .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
-                    .response(null)
-                    .build();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(responseDTO);
-        }
-    }
 
-    @Override
-    @Transactional
-    public ResponseEntity<ResponseDTO> deleteById(Integer id) {
-        log.info("Inicio método para eliminar lectura por id: {}", id);
-        try {
-            if (!lecturaRepository.existsById(id)) {
-                ResponseDTO responseDTO = ResponseDTO.builder()
-                        .success(false)
-                        .message(Constantes.RECORD_NOT_FOUND)
-                        .code(HttpStatus.NOT_FOUND.value())
-                        .build();
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(responseDTO);
-            }
-            lecturaRepository.deleteById(id);
-            ResponseDTO responseDTO = ResponseDTO.builder()
-                    .success(true)
-                    .message(Constantes.DELETED_SUCCESSFULLY)
-                    .code(HttpStatus.OK.value())
-                    .build();
-            return ResponseEntity.ok(responseDTO);
-        } catch (Exception e) {
-            log.error("Error al eliminar la lectura con id: {}", id, e);
-            ResponseDTO responseDTO = ResponseDTO.builder()
-                    .success(false)
-                    .message(Constantes.DELETE_ERROR)
-                    .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
-                    .build();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(responseDTO);
-        }
-    }
+	@Override
+	@Transactional(readOnly = true)
+	public ResponseEntity<ResponseDTO> findAll() {
+		log.info("Listar todas las lecturas");
+		try {
+			var list = lecturaRepository.findAll();
+			var dtoList = lecturaMapper.listEntityToDtoList(list);
+			ResponseDTO responseDTO = ResponseDTO.builder().success(true).message(Constantes.CONSULTED_SUCCESSFULLY)
+					.code(HttpStatus.OK.value()).response(dtoList).build();
+			return ResponseEntity.ok(responseDTO);
+		} catch (Exception e) {
+			log.error("Error al listar las lecturas", e);
+			ResponseDTO responseDTO = ResponseDTO.builder().success(false).message(Constantes.CONSULTING_ERROR)
+					.code(HttpStatus.INTERNAL_SERVER_ERROR.value()).response(null).build();
+			return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(responseDTO);
+		}
+	}
+
+	@Override
+	@Transactional
+	public ResponseEntity<ResponseDTO> deleteById(Integer id) {
+		log.info("Inicio método para eliminar lectura por id: {}", id);
+		try {
+			if (!lecturaRepository.existsById(id)) {
+				ResponseDTO responseDTO = ResponseDTO.builder().success(false).message(Constantes.RECORD_NOT_FOUND)
+						.code(HttpStatus.NOT_FOUND.value()).build();
+				return ResponseEntity.status(HttpStatus.NOT_FOUND).body(responseDTO);
+			}
+			lecturaRepository.deleteById(id);
+			ResponseDTO responseDTO = ResponseDTO.builder().success(true).message(Constantes.DELETED_SUCCESSFULLY)
+					.code(HttpStatus.OK.value()).build();
+			return ResponseEntity.ok(responseDTO);
+		} catch (Exception e) {
+			log.error("Error al eliminar la lectura con id: {}", id, e);
+			ResponseDTO responseDTO = ResponseDTO.builder().success(false).message(Constantes.DELETE_ERROR)
+					.code(HttpStatus.INTERNAL_SERVER_ERROR.value()).build();
+			return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(responseDTO);
+		}
+	}
 }
